<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_dictation">

    <fragment
        android:id="@+id/nav_dictation"
        android:name="com.openwhispr.android.feature.dictation.DictationFragment"
        android:label="@string/tab_dictation"
        tools:layout="@layout/fragment_dictation" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.openwhispr.android.feature.notes.NotesFragment"
        android:label="@string/tab_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_meetings"
        android:name="com.openwhispr.android.feature.meetings.MeetingsFragment"
        android:label="@string/tab_meetings"
        tools:layout="@layout/fragment_meetings" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.openwhispr.android.feature.chat.ChatFragment"
        android:label="@string/tab_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.openwhispr.android.feature.settings.SettingsFragment"
        android:label="@string/tab_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
